add form for adding new goods in DataBase

--- a/src/main/resources/templates/greeting.mustache
+++ b/src/main/resources/templates/greeting.mustache
@@ -1,10 +1,14 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <title>Getting Started: Serving Web Content</title>
+    <title>Started Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<div>Hello, {{name}}!</div>
+<h1>You are on the start page</h1>
+<button type="reset">
+    <a href="/main">Go to main page</a>
+</button>
+
 </body>
 </html>
