add filter of goods by category

--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -7,25 +7,47 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Main page</title>
 </head>
+
+<style>
+    table, th, td {
+        border:1px solid black;
+        border-collapse: collapse;
+    }
+</style>
+
 <body>
     <div>
-        <form method="post">
+        <p>Добавить товар</p>
+        <form method="post" action="main">
             <input type="text" name="goodsName" placeholder="Введите название товара">
             <input type="text" name="category" placeholder="Введите категорию">
             <button type="submit">Добавить товар в список</button>
         </form>
     </div>
 
+    <div>
+        <p>Найти товар</p>
+        <form method="post" action="filter">
+            <input type="text" name="filter" placeholder="введите категорию">
+            <button type="submit">Найти товары</button>
+        </form>
+    </div>
 
     <h2>Список товаров</h2>
-    {{#allGoods}}
-        <div>
-            <b>{{id}}</b>
-            <span>{{goodsName}}</span>
-            <span>{{category}}</span>
-        </div>
-    {{/allGoods}}
-
+    <table >
+        <tr>
+            <th>Id</th>
+            <th style="width: 150px">Goods name</th>
+            <th>Category</th>
+        </tr>
+        {{#goods}}
+            <tr>
+                <td>{{id}}</td>
+                <td>{{goodsName}}</td>
+                <td>{{category}}</td>
+            </tr>
+        {{/goods}}
+    </table>
 
 </body>
 </html>
