restricted access to adminPanel for User

--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -21,6 +21,12 @@
         <input type="hidden" name="_csrf" value="{{_csrf.token}}">
     </form>
 
+    <div style="margin-top: 10px">
+        <form method="get" action="user">
+            <button type="submit"> Редактировать пользователей</button>
+        </form>
+    </div>
+
     <div>
         <p>Добавить товар</p>
         <form method="post" action="main">
