--- a/src/main/resources/templates/userList.mustache
+++ b/src/main/resources/templates/userList.mustache
@@ -34,6 +34,12 @@
     {{/users}}
 </table>
 
+<div style="margin-top: 10px">
+    <form method="get" action="main">
+        <button type="submit"> Вернуться на главную</button>
+    </form>
+</div>
+
 
 </body>
 </html>
