--- a/src/main/resources/templates/userList.mustache
+++ b/src/main/resources/templates/userList.mustache
@@ -29,7 +29,7 @@
             <td>{{#roles}}
                 {{name}}
             {{/roles}}</td>
-            <td><a href="/user/{{id}}">Редактировать роль</a></td>
+            <td><a href="/editUsers/{{id}}">Редактировать пользователя</a></td>
         </tr>
     {{/users}}
 </table>
