--- a/src/main/resources/templates/productPanel.mustache
+++ b/src/main/resources/templates/productPanel.mustache
@@ -23,7 +23,7 @@
 <div>
     <h2>Редактировать информацию о товаре</h2>
     <form method="post" action="editProduct">
-        <div>Введите ID товара для удаления:
+        <div>Введите ID товара для редактирования:
         <input type="number" name="productID" placeholder="ID товара">
         </div>
 
